<resources>
    <string name="app_name">BTP-WMS Mobile Scanner</string>
    <string name="invoice_no">Document No:</string>
    <string name="item_no">Item no.</string>
    <string name="stat_ready_scan">Ready to scan</string>
    <string name="stat_wait">Scanning...</string>
    <string name="del_db">Delete Data</string>
    <string name="item_receive">Document Date:</string>
    <string name="material">Material:</string>
    <string name="material_cat">Material Category:</string>
    <string name="model">Model:</string>
    <string name="part_code">Part Code:</string>
    <string name="emp_id">Employee ID:</string>
    <string name="operator">Operator:</string>
    <string name="trans_type">Transfer Type:</string>
    <string name="class_type">Material Route:</string>
    <string name="mat_type">Material Type:</string>
    <string name="material_section">Transfer Section:</string>
    <string name="scan_list">Scanned List:</string>
    <string name="qty_received">Quantity:</string>
    <string name="doc_date">Document Date:</string>
    <string name="null_str">---</string>
    <string name="btp_wms">Warehouse Management System</string>
    <string name="btp_mobile">Mobile Scanner</string>
    <string name="rack_name">Rack:</string>
    <string name="rack_section">Rack Section No.</string>
    <string name="emp">Employee ID:</string>
    <string name="doc_info">Document Information</string>
    <string name="version">BTP-WMS Mobile Scanner version 03162020002</string>
    <string name="settings">Settings</string>
    <string name="curr_localhost">Current Localhost:</string>
    <string name="curr_version">Current Version:</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_localhost">Localhost</string>
    <string name="lbl_count">Scanned Items:</string>
    <string name="lbl_transaction">Transaction Type:</string>
    <string name="lbl_totalQty">Total Qty:</string>
    <string name="lbl_history">History</string>
    <string name="lbl_scanQ">Scan Code</string>
    <string name="dummy_value">10,000</string>
    <string name="dummy_name">J. Dela Cruz</string>
    <string name="lbl_vendor">Supplier:</string>
    <string name="lbl_exit">Scanning is paused</string>
    <string name="bt_savedProgress">Save Progress</string>
    <string name="bt_resetProgress">Reset Progress</string>
    <string name="bt_cancelDialog">Continue Scanning</string>
    <string name="lbl_rackLocation">Rack Location</string>
    <string name="lbl_PO">PO No:</string>
    <string name="lbl_chgQty">Change Quantity:</string>
    <string name="lbl_chgQty_hint">Enter Quantity</string>
    <string name="lbl_currentQty">Current Qty:</string>
    <string name="stat_codeResponse">Code</string>
    <string name="fetch_data"><i>Retrieving Data from Server...</i></string>
    <string name="on_failure_infoSub">Welcome to WMS Mobile Scanner</string>
    <string name="on_success_main_activity"><i>Data retrieval success!</i></string>
    <string name="http_200">200: Server OK</string>
    <string name="http_201">201: Posted</string>
    <string name="http_204">204: No Content</string>
    <string name="http_304">304: Not Modified</string>
    <string name="http_400">400: Bad Request</string>
    <string name="http_401">401: Not Authorized</string>
    <string name="http_403">403: Forbidden</string>
    <string name="http_404">404: Not Found</string>
    <string name="http_409">409: Conflict</string>
    <string name="http_500">500: Internal Server Error</string>
    <string name="http_502">502: Bad Gateway</string>
    <string name="http_503">503: Service Unavailable</string>
    <string name="http_504">504: Gateway Timeout</string>
    <string name="error_req_fields">Please complete the required fields to continue</string>
    <string name="req_field">Required Field</string>
    <string name="back_to_scanner">Back To Scanner</string>
    <string name="checker">Check QR/Barcode</string>
    <string name="active_month">Active Month:</string>
    <string name="active_year">Active Year:</string>
    <string name="manual_input">Manual Input</string>
    <string name="curr_itemcode">Enter Item Code:</string>
    <string name="duplicate_detect">Duplicate detected!</string>
    <string name="duplicate_desc">Duplicate where detected upon scanning this item.</string>
    <string name="duplicate_action">Choose action: <i>(Cannot be change once done.)</i></string>
    <string name="encode">Encode</string>
    <string name="n_encode">Don\'t Encode</string>
    <string name="set_newQty">Enter new quantity:</string>
    <string name="eg_code"><i>e.g. BTP-00XXX</i></string>
    <string name="eg_qty"><i>e.g. 150</i></string>
    <string name="dismiss">Close Viewer</string>
    <string name="remark">Remarks:</string>
    <string name="item_not_found">This item is not yet issued in selected section.</string>
</resources>
