<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckerActivity">

    <com.journeyapps.barcodescanner.CompoundBarcodeView
        android:id="@+id/barcode_view"
        android:layout_width="229dp"
        android:layout_height="229dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362"
        app:zxing_scanner_layout="@layout/custom_scanner">


        <ImageView
            android:id="@+id/stat_green"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_green_circle" />

        <ImageView
            android:id="@+id/stat_red"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:visibility="invisible"

            app:srcCompat="@drawable/ic_red_circle" />

        <TextView
            android:id="@+id/scannerStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="6dp"
            android:text="@string/stat_ready_scan"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </com.journeyapps.barcodescanner.CompoundBarcodeView>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="TextView"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcode_view"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/back_to_scanner"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        app:layout_constraintVertical_bias="0.65999997" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:text="@string/checker"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/barcode_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

</androidx.constraintlayout.widget.ConstraintLayout>